<?xml version="1.0"?>
<package format="2">
  <name>twist_recovery</name>
  <version>0.1.11</version>
  <description>
    A recovery behavior that performs a particular used-defined twist.
  </description>
  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author>Bhaskara Marthi</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/twist_recovery</url>
  <url type="repository">https://github.com/ros-planning/navigation_experimental.git</url>
  <url type="bugtracker">https://github.com/ros-planning/navigation_experimental/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>

  <export>
    <nav_core plugin="${prefix}/twist_plugin.xml" />
  </export>
</package>
